--- a/mod2-solution/css/style.css
+++ b/mod2-solution/css/style.css
@@ -1,3 +1,92 @@
-.row {
+*{
+    box-sizing: border-box;
+    margin: 0px;
+    padding: 0px;
+}
+
+body {
+  font-family: "Comic Sans MS", sans-serif;
+}
+
+.container {
   width: 100%;
+}
+
+header{
+  text-align: center;
+  padding-top: 40px;
+  padding-bottom: 30px;
+}
+
+h4 {
+
+}
+
+.columns {
+  display: flex;
+  align-content: center;
+  flex-flow: row wrap;
+  margin: 20px;
+}
+
+.column {
+  flex: 1;
+  margin: 15px;
+  padding: 30px 10px 10px 10px;
+  background-color: gray;
+  border: 2px solid black;
+  position: relative;
+}
+
+#Chicken{
+  width: 100px;
+  height: 30px;
+  background-color: #d18e87;
+  border: 2px solid black;
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin-top: -2px;
+  margin-right: -2px;
+  text-align: center;
+}
+
+#Beef {
+  width: 100px;
+  height: 30px;
+  background-color: #c44c4c;
+  border: 2px solid black;
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin-top: -2px;
+  margin-right: -2px;
+  text-align: center;
+}
+
+#Sushi {
+  width: 100px;
+  height: 30px;
+  background-color: #ddcb87;
+  border: 2px solid black;
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin-top: -2px;
+  margin-right: -2px;
+  text-align: center;
+}
+
+@media screen and (max-width: 991px) {
+  .columns .column {
+    margin-bottom: 10px;
+    flex-basis: 40%;
+  }
+}
+
+@media screen and (max-width: 767px) {
+	.columns .column {
+		flex-basis: 100%;
+		margin: 0 0 5px 0;
+	}
 }
